--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/plugin_development/TerrariaHelper/pom.xml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/plugin_development/TerrariaHelper/pom.xml
@@ -19,6 +19,14 @@
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
+        <repository>
+            <id>placeholderapi</id>
+            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -42,6 +50,25 @@
             <version>10.0.31</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/libsdisguises/LibsDisguises-10.0.31-Free.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.10.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.MilkBowl</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.7</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.earth2me</groupId>
+            <artifactId>essentials</artifactId>
+            <version>2.18.2.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/essentials/EssentialsX-2.18.2.0.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
