projectile AI finished

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/setting.yml
@@ -50,6 +50,8 @@ deathMessages:
   - <victim> 身首异处
   - <victim> 的头飞了
   - <victim> 被登dua郎
+  - <victim> 心花怒放
+  - <victim> 脑洞大开
   lava:
   - <victim> 在岩浆里泡澡，骨头渣都没剩下
   - <victim> 很显然不太熟悉岩浆的厉害
