--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
@@ -3,8 +3,8 @@
     autoTrace: false
     # 自动追踪的寻敌半径，单位（格）。不写则视为12
     autoTraceRadius: 12
-    # 自动追踪的能力，数字越高则追踪转向效率越高。不写则视为0.5
-    autoTraceAbility: 0.5
+    # 自动追踪的能力，数字越高则追踪转向的最高效率越高。不写则视为4
+    autoTraceAbility: 4
     # 这个弹射物会不会被闭合的宝箱怪，旋转的火月怪等反弹？不写则视为true
     canBeReflected: true
     # 击中怪物后敌人多少帧后才能被本弹射物再次伤害？（一秒=20帧）不写则视为5
@@ -17,8 +17,8 @@
     noGravityTicks: 15
     # 重力影响，受重力时每帧向下的速度改变（负数则为向上偏移）。不写则视为0.05
     gravity: 0.05
-    # 弹射物的碰撞箱体积，不写视为0.25
-    projectileSize: 0.25
+    # 弹射物的碰撞箱体积，不写视为0.125
+    projectileSize: 0.125
     # 每帧速度乘以这个数字，例如1.25则为每帧加速25%，不写则视为1
     speedMultiPerTick: 0
     # 最大速度（单位：格/帧），防止恶魔锄刀类武器的速度突破天际，不写则视为2
