--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/PlayerData/laomianyang.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/PlayerData/laomianyang.yml
@@ -34,7 +34,61 @@ inventory:
   - AIR
   - AIR
   - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
   voidBag:
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
+  - AIR
   - AIR
   - AIR
   - AIR
