--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/items.yml
@@ -3559,6 +3559,69 @@
     speedMulti: 0.24
   worth: 800000
   rarity: 3
+斯塔提斯战盔:
+  item: IRON_HELMET
+  lore:
+  - §r[装备]
+  attributes:
+    defence: 18
+    damageMeleeMulti: 0.1
+    useSpeedMeleeMulti: 0.1
+    critMelee: 7
+  worth: 2400000
+  rarity: 5
+斯塔提斯头饰:
+  item: IRON_HELMET
+  lore:
+  - §r[装备]
+  attributes:
+    defence: 14
+    damageRangedMulti: 0.1
+    ammoConsumptionRate: -0.1
+    critRanged: 7
+  worth: 2400000
+  rarity: 5
+斯塔提斯帽子:
+  item: IRON_HELMET
+  lore:
+  - §r[装备]
+  attributes:
+    defence: 10
+    damageMagicMulti: 0.1
+    maxMana: 30
+    manaUseMulti: -0.1
+    critMagic: 7
+  worth: 2400000
+  rarity: 5
+斯塔提斯兜帽:
+  item: IRON_HELMET
+  lore:
+  - §r[装备]
+  attributes:
+    defence: 8
+    damageSummonMulti: 0.12
+    speedMulti: 0.05
+  worth: 2400000
+  rarity: 5
+斯塔提斯盔甲:
+  item: IRON_CHESTPLATE
+  lore:
+  - §r[装备]
+  attributes:
+    defence: 20
+    crit: 5
+  worth: 2400000
+  rarity: 5
+斯塔提斯护胫:
+  item: IRON_LEGGINGS
+  lore:
+  - §r[装备]
+  attributes:
+    defence: 16
+    speedMulti: 0.05
+    damageMulti: 0.05
+  worth: 2400000
+  rarity: 5
 铜头盔:
   item: IRON_HELMET
   lore:
