--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/armorSet.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/armorSet.yml
@@ -121,18 +121,36 @@ pieces:
   - 金套装
   金护胫:
   - 金套装
+  丛林帽:
+  - 丛林法师套
+  丛林衣:
+  - 丛林法师套
+  丛林裤:
+  - 丛林法师套
   流星头盔:
   - 流星套装
   流星护甲:
   - 流星套装
   流星护腿:
   - 流星套装
+  黑曜石逃犯帽:
+  - 黑曜石套装
+  黑曜石风衣:
+  - 黑曜石套装
+  黑曜石裤:
+  - 黑曜石套装
   暗影头盔:
   - 暗影套装
   暗影鳞甲:
   - 暗影套装
   暗影护胫:
   - 暗影套装
+  死灵头盔:
+  - 死灵射手套
+  死灵胸甲:
+  - 死灵射手套
+  死灵护胫:
+  - 死灵射手套
   熔岩头盔:
   - 熔岩套装
   熔岩胸甲:
@@ -333,7 +351,7 @@ sets:
     - §a套装效果： 
     - §a+12 防御
     - §a+1 远程伤害
-    - §a+9% 远程暴击率
+    - §a+9% 远程暴击
     - §a-20% 弹药消耗
     - §a+10% 移动速度
     - §a远程伤害暴击有概率召唤一个沙龙卷，沙龙卷持续15秒，对接触到的敌人造成伤害。它所造成的伤害等同于你引发它的那一发弹幕的伤害，而它的暴击率等同于你所持武器的暴击率。
@@ -485,14 +503,39 @@ sets:
     - §a套装效果： +8 防御
     attributes:
       defence: 8
+  丛林法师套:
+    lore:
+    - ''
+    - §a套装效果： -16% 魔力消耗
+    attributes:
+      manaUseMulti: -0.16
   流星套装:
     lore:
     - ''
     - §a套装效果： 太空枪不消耗魔力
+  黑曜石套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a+15% 召唤伤害
+    - §a+15% 近战速度
+    - §a+30% 近战范围
+    attributes:
+      damageSummonMulti: 0.15
+      meleeReachMulti: 0.3
+      useSpeedMeleeMulti: 0.15
   暗影套装:
     lore:
     - ''
     - §a套装效果： +25% 移动速度
+    attributes:
+      speedMulti: 0.25
+  死灵射手套:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a-20% 弹药消耗
+    - §a+10% 远程暴击
     attributes:
       speedMulti: 0.25
   熔岩套装:
