--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/items.yml
@@ -5509,6 +5509,16 @@
   item: IRON_INGOT
   worth: 30000
   rarity: 1
+珊瑚:
+  item: CLAY_BALL
+  worth: 20000
+  rarity: 0
+海星:
+  item: CLAY_BALL
+  rarity: 0
+贝壳:
+  item: CLAY_BALL
+  rarity: 0
 恶魔锭:
   item: IRON_INGOT
   worth: 300000
@@ -5533,6 +5543,10 @@
   item: CLAY_BALL
   worth: 60000
   rarity: 3
+纯净凝胶:
+  item: CLAY_BALL
+  worth: 500000
+  rarity: 4
 钴锭:
   item: IRON_INGOT
   worth: 210000
