--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/recipes.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/recipes.yml
@@ -174,6 +174,11 @@ FURNACE:
     - 黑曜石:20
     - 丝绸:10
     - 暗影鳞片:5
+  '34':
+    requireLevel: 1
+    resultItem: 天蓝锭
+    requireItem:
+    - 天蓝矿:4
 ANVIL:
   '1':
     requireLevel: 1
