--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Blood.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Blood.yml
@@ -1,24 +1,24 @@
-baka:
+generic:
   # Y轴偏移，默认是在脚的位置
-  offsetY: 3
+  offsetY: -0.5
   # 血条背景
   background:
-    path: "xx.png"
-    width: 200
+    path: "blank.png"
+    width: 40
     height: 10
   # 血条图片
   health:
-    path: "xx.png"
-    width: "5+%health%*190"
+    path: "blank.png"
+    width: 0
     height: 10
   # 变量:
   #   per  -> 当前血条比例: 0.00-1.00
   #   h    -> 当前血量
   #
   string:
-    xx:
+    background:
       # 变量同上，以及%name% -> 怪物名   若为纯数字及计算符号，则为计算值
-      content: "卧槽无情"
+      content: "§#FFFF00||||||||||||||||||||||||||||||||||||||||"
       x: 1
       y: 1
       scale: 0.5
