--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/huds.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/huds.yml
@@ -23,6 +23,10 @@ currentItemSize: 16
 Functions:
   # 界面开启时会自动执行open方法，利用open方法来开启定时刷新变量的方法
   open: "方法.异步执行方法('更新hud变量')"
+  
+  # 设置玩家显示的血量
+  preRender: |-
+    界面变量.healthRounded = 方法.玩家是否飞行() ? 方法.到整数(0) : 方法.到整数(方法.玩家血量())
 
   # 关于变量更新在 背包.yml 里讲了,可以去那个配置里看
   更新hud变量: |-
@@ -278,35 +282,35 @@ heart1_background_texture:
   width: "12"
   height: "12"
   texture: "'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart2_background_texture:
   x: "(方法.取屏幕宽度) - 126"
   y: "6"
   width: "12"
   height: "12"
   texture: "'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart3_background_texture:
   x: "(方法.取屏幕宽度) - 114"
   y: "6"
   width: "12"
   height: "12"
   texture: "'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart4_background_texture:
   x: "(方法.取屏幕宽度) - 102"
   y: "6"
   width: "12"
   height: "12"
   texture: "'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart5_background_texture:
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 5 ? (方法.取屏幕宽度) - 93 : (方法.取屏幕宽度) - 90"
   y: "方法.到整数(方法.取变量('terraria_health_tier')) == 5 ? 3 : 6"
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 5 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 5 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 5 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart6_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 6) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 6 ? (方法.取屏幕宽度) - 81 : (方法.取屏幕宽度) - 78"
@@ -314,7 +318,7 @@ heart6_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 6 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 6 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 6 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart7_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 7) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 7 ? (方法.取屏幕宽度) - 69 : (方法.取屏幕宽度) - 66"
@@ -322,7 +326,7 @@ heart7_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 7 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 7 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 7 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart8_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 8) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 8 ? (方法.取屏幕宽度) - 57 : (方法.取屏幕宽度) - 54"
@@ -330,7 +334,7 @@ heart8_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 8 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 8 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 8 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart9_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 9) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 9 ? (方法.取屏幕宽度) - 45 : (方法.取屏幕宽度) - 42"
@@ -338,7 +342,7 @@ heart9_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 9 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 9 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 9 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart10_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 10) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 10 ? (方法.取屏幕宽度) - 33 : (方法.取屏幕宽度) - 30"
@@ -346,7 +350,7 @@ heart10_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 10 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 10 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 10 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart11_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 11) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 11 ? (方法.取屏幕宽度) - 141 : (方法.取屏幕宽度) - 138"
@@ -354,7 +358,7 @@ heart11_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 11 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 11 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 11 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart12_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 12) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 12 ? (方法.取屏幕宽度) - 129 : (方法.取屏幕宽度) - 126"
@@ -362,7 +366,7 @@ heart12_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 12 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 12 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 12 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart13_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 13) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 13 ? (方法.取屏幕宽度) - 117 : (方法.取屏幕宽度) - 114"
@@ -370,7 +374,7 @@ heart13_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 13 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 13 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 13 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart14_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 14) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 14 ? (方法.取屏幕宽度) - 105 : (方法.取屏幕宽度) - 102"
@@ -378,7 +382,7 @@ heart14_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 14 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 14 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 14 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart15_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 15) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 15 ? (方法.取屏幕宽度) - 93 : (方法.取屏幕宽度) - 90"
@@ -386,7 +390,7 @@ heart15_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 15 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 15 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 15 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart16_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 16) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 16 ? (方法.取屏幕宽度) - 81 : (方法.取屏幕宽度) - 78"
@@ -394,7 +398,7 @@ heart16_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 16 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 16 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 16 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart17_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 17) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 17 ? (方法.取屏幕宽度) - 69 : (方法.取屏幕宽度) - 66"
@@ -402,7 +406,7 @@ heart17_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 17 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 17 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 17 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart18_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 18) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 18 ? (方法.取屏幕宽度) - 57 : (方法.取屏幕宽度) - 54"
@@ -410,7 +414,7 @@ heart18_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 18 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 18 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 18 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart19_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 19) ? 'true' : 'false'"
   x: "方法.到整数(方法.取变量('terraria_health_tier')) == 19 ? (方法.取屏幕宽度) - 45 : (方法.取屏幕宽度) - 42"
@@ -418,7 +422,7 @@ heart19_background_texture:
   width: "方法.到整数(方法.取变量('terraria_health_tier')) == 19 ? 18 : 12"
   height: "方法.到整数(方法.取变量('terraria_health_tier')) == 19 ? 18 : 12"
   texture: "方法.到整数(方法.取变量('terraria_health_tier')) == 19 ? 'hud/heart_container_last.png' : 'hud/heart_container.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
 heart20_background_texture:
   visible: "(方法.到整数(方法.取变量('terraria_health_tier')) >= 20) ? 'true' : 'false'"
   x: "(方法.取屏幕宽度) - 33"
@@ -426,4 +430,4 @@ heart20_background_texture:
   width: "18"
   height: "18"
   texture: "'hud/heart_container_last.png'"
-  tip: "方法.合并文本(方法.到整数(方法.玩家血量()), '/', 方法.到整数(方法.玩家最大血量()))"
+  tip: "方法.合并文本(界面变量.healthRounded, '/', 方法.到整数(方法.玩家最大血量()))"
